--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "azure-storage": "^1.3.1",
     "botbuilder": "^3.3.2",
+    "fs": "0.0.1-security",
+    "gm": "^1.23.0",
+    "needle": "^1.1.2",
+    "oxford-face-api": "^0.1.1",
     "parse-json": "^2.2.0",
-    "restify": "^4.1.1"
+    "request": "^2.75.0",
+    "restify": "^4.1.1",
+    "superagent": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
